fix: reduce spacing between sections in smaller screen sizes

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -81,6 +81,10 @@ a:visited {
 
 .section-padding {
   padding: 120px 0;
+
+  @media only screen and (max-width: 36rem) {
+    padding: 80px 0;
+  }
 }
 
 // Utils
